--- a/config.example.json
+++ b/config.example.json
@@ -1,9 +1,21 @@
-[{
-    "title": "Some List",
-    "calendarId": "example.com_1xxxxxxx8@group.calendar.google.com",
-    "emails": [
-        "Ron Berg <ron@berg.com>",
-        "Chris <chrisboy@chrisland.com>",
-        "<stuff@example.com>"
-    ]
-}]
+{
+    "lists": [
+        {
+            "title": "Some List",
+            "calendarId": "example.com_1xxxxxxx8@group.calendar.google.com",
+            "emails": [
+                "Ron Berg <ron@bexample.com>",
+                "Chris <chrisboy@example.com>",
+                "<stuff@example.com>"
+            ]
+        }
+    ],
+    "api": {
+        "email": "287.......................................ron@developer.gserviceaccount.com",
+        "keyFile": "./app/authorization/google_api_key.pem",
+        "key": null,
+        "scopes": [
+            "https://www.googleapis.com/auth/calendar"
+        ]
+    }
+}
