updated ignore to be more flexable

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ npm-debug.log
 ehthumbs.db
 Thumbs.db
 
+*.pem
 config.json
-app/authorization/auth.config.json
-app/authorization/google_api_key.pem
 app/authorization/data
