--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
         "test": "echo \"Error: no text specified\" && exit 1"
     },
     "devDependencies": {
+        "btoa": "1.1.2",
         "googleapis": "1.0.4",
-        "mkdirp": "0.5.0"
+        "mkdirp": "0.5.0",
+        "nodemailer": "1.1.1"
     },
     "author": "Troy Blank",
     "license": "BSD-3-Clause"
