--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "test": "echo \"Error: no text specified\" && exit 1"
     },
-    "devDependencies": {
+    "dependencies": {
         "btoa": "1.1.2",
         "googleapis": "1.0.4",
         "mkdirp": "0.5.0",
